[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "clipboard>=0.0.4",
    "crypto>=1.4.1",
    "pyautogui>=0.9.54",
    "requests>=2.32.3",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "websockets>=15.0.1",
]
